add style lint && format

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #21A9FF;
-$accent-color: #292E9A;
+$primary-color: #21a9ff;
+$accent-color: #292e9a;
 $base-color: #fff;
 $background-color: #fafafa;
 $white: #fff;
