--- a/src/components/atoms/AppButton/main.module.scss
+++ b/src/components/atoms/AppButton/main.module.scss
@@ -1,6 +1,6 @@
-@import "src/assets/styles/variables";
+@import 'src/assets/styles/variables';
 
 .button {
-    background-color: $primary-color;
-    color: $white;
+  background-color: $primary-color;
+  color: $white;
 }
