AppButtonのスタイルを変更

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,20 @@
+// color
 $primary-color: #21a9ff;
 $accent-color: #292e9a;
 $base-color: #fff;
 $background-color: #fafafa;
 $white: #fff;
 $black: #333;
+// font-size
+$medium-font-size: 16px;
+$mini-font-size: 14px;
+$semi-large-size: 20px;
+$large-size: 24px;
+// radius
+$mini-radius: 4px;
+$medium-radius: 8px;
+// padding
+$mini-padding: 4px;
+$medium-padding: 8px;
+$semi-large-padding: 16px;
+$large-padding: 32px;
