--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,13 +3,15 @@ $primary-color: #21a9ff;
 $accent-color: #292e9a;
 $base-color: #fff;
 $background-color: #fafafa;
+$background-accent-color: #08b3ff;
 $white: #fff;
 $black: #333;
+$gray: #ddd;
 // font-size
 $medium-font-size: 16px;
 $mini-font-size: 14px;
-$semi-large-size: 20px;
-$large-size: 24px;
+$semi-large-font-size: 20px;
+$large-font-size: 24px;
 // radius
 $mini-radius: 4px;
 $medium-radius: 8px;
@@ -18,3 +20,8 @@ $mini-padding: 4px;
 $medium-padding: 8px;
 $semi-large-padding: 16px;
 $large-padding: 32px;
+// margin
+$mini-margin: 8px;
+$medium-margin: 12px;
+$semi-large-margin: 16px;
+$large-margin: 32px;
