--- a/src/components/organisms/header/HeaderDesign.module.scss
+++ b/src/components/organisms/header/HeaderDesign.module.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/styles/variables';
 .header {
-  height: 5%;
+  height: 48px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 1px 1px 1px rgba($color: #0000006b, $alpha: 0.5);
 }
